Fixed overlapping footer

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,6 +9,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #282c34;
   color: white;
+  margin-bottom: 5rem;
 }
 
 header {
@@ -24,7 +25,7 @@ code {
     monospace;
 }
 
-.footer {
+#footer {
   margin-top: 1rem;
   padding: 1rem;
   text-align: center;
